feat: Introduce new route optimization, unified BFF, and user management services, alongside comprehensive Docker infrastructure and various service configurations.